products/usage-ops/deploy/k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usage-ops-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usage-ops-web
  template:
    metadata:
      labels:
        app: usage-ops-web
    spec:
      containers:
        - name: usage-ops-web
          image: usage-ops-web:staging
          ports:
            - containerPort: 80
