products/usage-ops/deploy/k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usage-ops-backend
spec:
  selector:
    app: usage-ops-backend
  ports:
    - port: 8087
      targetPort: 8087
