products/usage-ops/deploy/k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usage-ops-web
spec:
  selector:
    app: usage-ops-web
  ports:
    - port: 80
      targetPort: 80
